﻿===== Hasor-Core v2.0.1
* 改进:
    01.修改ShutdownHook钩子。在start时注册它、当shutdown时解除注册。
    02.增加Environment接口的包装器。

===== Hasor-Core v2.0.0
* 新增:
    01.新增 @Inject、@Init 两个注解以支持注解方式的自动注入。
    02.添加 ShutdownHook钩子，当外部终止jvm的时候，Hasor可以引发shutdown过程。
    03.事务管理增加“TransactionTemplate”接口。
    04.启动过程中增加了一些 log 的输出。
    05.将jetty的JSON解析器代码添加到Hasor工具代码中，位于包“org.more.json”。
    06.新增WebApiBinderWrap类。
    07.ASM包升级为5.0版本，原有的ASM组建在解析jdk1.8的类文件时会有异常。
* 改进:
    01.StandardEnvironment构造方法改进。
    02.StartModule接口更名为LifeModule，并新增了onStop方法。至此通过LifeModule接口可以得到模块整个生命周期。
    03.AbstractEnvironment类的initEnvironment方法增加Settings类型参数。createSettings方法不再属于AbstractEnvironment的抽象方法。
    04.StandardEnvironment类增加Settings类型参数的构造方法。
    05.MimeType接口增加getContent()方法。
    06.原有模块在实现 StartModule 接口时，如果是通过启动参数或者配置方式的模块，器onStart调用时间点在“ContextEvent_Started”事件之后。
        - 现改为引发“ContextEvent_Started”事件时。
    07.MVC的插件分离成独立插件。
    08.db包“datasource”模块重构、简化逻辑，它不再提供数据库连接和当前线程的映射绑定。
    09.事务管理器模块大量优化，同时“Manager”更名为“TranManager”。可以更好的让人理解。
    10.事务管理器负责提供数据库连接与当前线程的绑定关系。
    11.删除ResultModule类和其相关的功能，该功能不再是核心功能的一部分。
    12.MVC框架被迁出 Hasor框架成为一个独立的Web开发框架名为“haweb”。
* 修复:
    01.大量优化。。
    02.Fix，classcode模块对long、float、double基本类型错误处理的问题。
    03.AbstractClassConfig增加对 java javax 包类的排除，凡是这两个包的类都不进行aop。

===== Hasor-Core v1.2.0
* 新增:
    01.增加 @IgnoreParam注解，用于Form表单注入忽略。
    02.net.hasor.db.transaction.Manager新增回调方式执行事务的方法。
    03.事务拦截器部分分离出独立的事务插件，不再属于db的一部分。
* 修复:
    01.修复BeanUtils在获取所有字段、所有方法时无法获取到父类中数据的问题。
* 改进:
    01.Validation验证类传入的参数改为泛型，ValidationCallInterceptor增加了对泛型判断的逻辑。
    02.Valid验证框架分离出MVC成为一个独立的验证框架。
    03.改进ResultDO相关Message方面的功能，使其用起来更爽。

===== Hasor-Core v1.1.0
* 新增:
    01.增加ContextMap类，该类可以为WebMVC提供request作用域范围的数据存储。可以通过AbstractWebController或者AppContext获取到它。
    02.mvc框架增加请求文件名尾缀匹配，默认配置：“htm;html;do;”，配置项为：“hasor.modConfig.mvc.interceptFiles”。
    03.Hasor增加autoAware方法用以冲抵ApiBinder中删除的autoAware方法。
* 修复:
    01.修复TemplateAppContext中在加载模块的时候，没有拦截住因为引入依赖而导致的报错。