@@ -2,6 +2,7 @@
 * 改进:
     01.修改ShutdownHook钩子。在start时注册它、当shutdown时解除注册。
     02.增加Environment接口的包装器。
+    03.Fix “Shutdown in progress”异常。
 
 ===== Hasor-Core v2.0.0
 * 新增:
